# dayseam

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-semver-label.yml  ci.yml  e2e.yml  mas-connect-upload.yml  mas-package-verify.yml  mas-store-pkg.yml  release.yml  supply-chain.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/public/: hydrate-theme.js
apps/desktop/src/: App.tsx  splash.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  PrivacyInfo.xcprivacy  build.rs  entitlements.mas.md  entitlements.mas.plist  entitlements.md  tauri.conf.json  tauri.mas.conf.json
apps/desktop/src-tauri/capabilities/: default.json  updater.json
apps/desktop/src-tauri/src/: keychain_profile.rs  lib.rs  local_git_scan.rs  main.rs  oauth_config.rs  oauth_persister.rs  oauth_session.rs  startup.rs  state.rs
apps/desktop/src-tauri/src/ipc/: atlassian.rs  broadcast_forwarder.rs  commands.rs  github.rs  mod.rs  oauth.rs  outlook.rs  run_forwarder.rs
apps/desktop/src-tauri/src/security_scoped/: macos.rs  mod.rs  stub.rs
apps/desktop/src-tauri/tests/: capabilities.rs  command_surface_lockstep.rs  oauth.rs  reconnect_rebind.rs
apps/website/: .gitignore  README.md  astro.config.mjs  package.json
crates/connectors-sdk/: Cargo.toml
crates/connectors-sdk/src/: auth.rs  clock.rs  connector.rs  ctx.rs  http.rs  lib.rs  mock.rs  raw_store.rs  sync.rs
crates/connectors-sdk/tests/: basic_auth.rs  cancellation.rs  http_retry.rs  mock_connector.rs  no_cross_crate_leak.rs
crates/connectors-sdk/tests/common/: mod.rs
crates/connectors/connector-confluence/: Cargo.toml
crates/connectors/connector-confluence/src/: auth.rs  config.rs  connector.rs  lib.rs  normalise.rs
crates/connectors/connector-confluence/tests/: auth.rs  scaffold.rs  walk.rs
crates/connectors/connector-github/: Cargo.toml
crates/connectors/connector-jira/: Cargo.toml
crates/dayseam-core/src/: error.rs  error_codes.rs  lib.rs
crates/dayseam-core/tests/: error_codes.rs  serde_round_trip.rs  ts_types_generated.rs
crates/dayseam-db/: build.rs
crates/dayseam-db/migrations/: 0004_sinks.sql  0006_dedup_indexes.sql  0007_security_scoped_bookmarks.sql
crates/dayseam-db/src/: error.rs  lib.rs
crates/dayseam-db/tests/: repos.rs
crates/dayseam-orchestrator/: Cargo.toml
crates/dayseam-orchestrator/src/: generate.rs  lib.rs  orchestrator.rs  registries.rs  retention.rs  save.rs  startup.rs
crates/dayseam-report/src/: dedup.rs  (+6 more)
docs/: privacy-security.md
docs/compliance/: MAS-APP-REVIEW-NOTES.md  MAS-EXPORT-COMPLIANCE.md  MAS-JIT-ENTITLEMENTS.md
docs/design/: 2026-phase-5-mas-architecture.md
docs/dogfood/: 2026-04-20-cross-source-enrichment-parity-audit.md  phase-2-dogfood-notes.md  v0.2-dogfood-notes.md  v0.4-dogfood-notes.md
docs/plan/: 2026-04-18-v0.1-phase-2-local-git.md  2026-04-20-v0.2-atlassian.md  2026-04-20-v0.3-report-polish-hardening.md  2026-04-22-v0.4-github-connector.md  2026-04-26-v0.9-outlook-connector.md  2026-phase-5-mas-app-store.md  README.md
docs/release/: CODESIGN.md  MAS-CONNECT-UPLOAD.md  PHASE-3-5-CODESIGN.md
docs/review/: 2026-multi-lens-full-repo-review.md  phase-1-review.md  phase-3-review-addendum.md  phase-5-mas-review.md  v0.2-review.md
docs/setup/: azure-app-registration.md
docs/updater/: 2026-04-20-macos-unsigned-updater-caveat.md
e2e/: package.json
scripts/ci/: check-entitlements.sh  mas-sandbox-launch-smoke.sh  verify-bundle-privacy-manifest.sh  verify-tauri-bundle-entitlements.sh
scripts/release/: build-dmg.sh  bump-version.sh  check-unreleased-for-semver-pr.sh  extract-release-notes.sh  generate-latest-json.sh  test-bump-version.sh  test-generate-latest-json.sh
(+170 files in other folders)
