[package]
name = "dayseam-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Dayseam desktop shell (Tauri 2)."

[lib]
name = "dayseam_desktop"
path = "src/lib.rs"

[[bin]]
name = "dayseam-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
] }
thiserror = { workspace = true }
tracing = { workspace = true }
tauri = { version = "2", features = [] }
dayseam-core = { path = "../../../crates/dayseam-core" }
dayseam-db = { path = "../../../crates/dayseam-db" }
dayseam-events = { path = "../../../crates/dayseam-events" }
dayseam-secrets = { path = "../../../crates/dayseam-secrets", features = ["keychain"] }

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }

[features]
# `custom-protocol` wires in Tauri's custom-protocol flag for release
# bundles — unchanged from the scaffold.
custom-protocol = ["tauri/custom-protocol"]
# `dev-commands` compiles in the `dev_*` IPC commands (`dev_emit_toast`,
# `dev_start_demo_run`) used by the frontend test harness and the in-app
# dev tray. Enabled by default during development so `pnpm tauri dev`
# just works; release builds turn it off via
# `--no-default-features --features custom-protocol` in CI.
dev-commands = []
default = ["dev-commands"]
