[package]
name = "connector-confluence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Confluence Cloud source connector for Dayseam: Basic-auth credential validation and shared Atlassian identity seed (DAY-79 scaffold)."

[dependencies]
connector-atlassian-common = { path = "../connector-atlassian-common" }
connectors-sdk = { path = "../../connectors-sdk" }
dayseam-core = { path = "../../dayseam-core" }
dayseam-events = { path = "../../dayseam-events" }

async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
serde_json = { workspace = true }
connector-jira = { path = "../connector-jira" }
